# FlagField-Manager

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md  config_and_compile.bat
include/: FlagField.hpp  flagfield.hpp
tests/: FlagField_MyTests.cpp  FlagField_Tests.cpp  FlagField_gTests.cpp  flagfield_tests.cpp
